    - Kaguya will now wait 5 minutes before auto-disconnecting.
- Critical hits removed from $quickdraw
- $quickdraw winning return is now 1.90x your bet (was 1.7x)
- Some music commands will now show the thumbnail of the video/song when executing these commands.
- Added in an (experimental) $m lyrics command. It probably doesn't work with youtube videos though. Supporter only.

Version 1.30

- $stats will now show the process's CPU usage as well as the RAM usage.
- $quickdraw has had the winning multiplier reduced to 1.75x your bet (was 1.80x)
- $quickdraw critical hit chance has been reduced:
    - Regular: 2% (was 8%)
    - Supporter or has upvoted within the last 12 hours: 4% (was 16%)
    - Supporter and has upvoted: 6% (was 32%)
- $quickdraw critical bonus multiplier has been changed to 2.40x (was 4.05x)
- Fixed a bug with $timely where only users who upvoted within the last 6 hours 
    would get the double critical chance (was supposed to be 12 hours)
- Fixed a bug with $timely where users who are an upvoter or active supporter would 
    receive a -2% critical hit bonus compared to the default.
- Timely critical hit chances have been adjusted:
    - Crtical base: 14% (was 14%, just writing here for reference)
    - If upvoted or is an active supporter: 22% (was 12%)
    - If upvoted and supporter: 30% (was 24%)
- Fixed a bug with the timely critical rewards where all criticals were -1% from
    what they should have been.
- $gamblehistory will now show statistics for your $quickdraw results.
- $gr and $qd now have a max gamble limit of 500,000 points if the user is a supporter.



Version 1.29

- $quickdraw will now benefit from critical hit bonuses if the user is a supporter, 
    or if the user has recently upvoted. (16% chance if upvoted or is an active supporter, 
    32% if upvoted and supported).
- $quickdraw will now let supporters bet an unlimited amount of points.